# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "basePath": "/api/v1",
+    "basePath": "/api",
     "paths": {
         "/health-check": {
             "get": {
@@ -25,19 +25,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_huypham67_bookmark-management_internal_dto_response.HealthCheckResponse"
+                            "$ref": "#/definitions/github_com_huypham67_bookmark-service_internal_dto_response.HealthCheckResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_huypham67_bookmark-management_internal_dto_response.HealthCheckResponse"
+                            "$ref": "#/definitions/github_com_huypham67_bookmark-service_internal_dto_response.HealthCheckResponse"
                         }
                     }
                 }
             }
         },
-        "/links/redirect/{code}": {
+        "/v1/links/redirect/{code}": {
             "get": {
                 "description": "Redirect user to the original URL based on the shortened code",
                 "consumes": [
@@ -78,7 +78,7 @@
                 }
             }
         },
-        "/links/shorten": {
+        "/v1/links/shorten": {
             "post": {
                 "description": "Create a shortened URL code and save it to Redis",
                 "consumes": [
@@ -98,7 +98,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_huypham67_bookmark-management_internal_dto_request.ShortenURLRequest"
+                            "$ref": "#/definitions/github_com_huypham67_bookmark-service_internal_dto_request.ShortenURLRequest"
                         }
                     }
                 ],
@@ -106,7 +106,7 @@
                     "200": {
                         "description": "Shorten URL generated successfully",
                         "schema": {
-                            "$ref": "#/definitions/github_com_huypham67_bookmark-management_internal_dto_response.ShortenURLResponse"
+                            "$ref": "#/definitions/github_com_huypham67_bookmark-service_internal_dto_response.ShortenURLResponse"
                         }
                     },
                     "400": {
@@ -130,7 +130,7 @@
             "type": "object",
             "additionalProperties": {}
         },
-        "github_com_huypham67_bookmark-management_internal_dto_request.ShortenURLRequest": {
+        "github_com_huypham67_bookmark-service_internal_dto_request.ShortenURLRequest": {
             "type": "object",
             "required": [
                 "url"
@@ -145,7 +145,7 @@
                 }
             }
         },
-        "github_com_huypham67_bookmark-management_internal_dto_response.HealthCheckResponse": {
+        "github_com_huypham67_bookmark-service_internal_dto_response.HealthCheckResponse": {
             "type": "object",
             "properties": {
                 "instance_id": {
@@ -159,7 +159,7 @@
                 }
             }
         },
-        "github_com_huypham67_bookmark-management_internal_dto_response.ShortenURLResponse": {
+        "github_com_huypham67_bookmark-service_internal_dto_response.ShortenURLResponse": {
             "type": "object",
             "properties": {
                 "code": {
